feat: add CMS gc with xmx1g, xms1g